--- a/L3Task01/fullstack-ecommerce-main/admin/src/components/AddProduct/AddProduct.css
+++ b/L3Task01/fullstack-ecommerce-main/admin/src/components/AddProduct/AddProduct.css
@@ -1,3 +1,62 @@
 .add-product{
-    background-color: aqua;
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 700px;
+    padding: 20px 30px;
+    margin: 30px 40px; 
+    border-radius: 6px;
+    background-color: white;
+
+} 
+.addproduct-itemfield{
+    width: 100%;
+    color: #7b7b7b;
+    font-size: 16px;
+
+}
+ 
+.addproduct-itemfield input{
+    box-sizing:border-box ;
+    width: 100%;
+    height: 50px;
+    border-radius: 4px;
+    padding-left: 12px;
+    border: 1px solid #c3c3c3;
+    outline: none;
+    color:#7b7b7b;
+    font-family: "Poppins";
+    font-size: 14px;
+}
+.addproduct-price{
+    display: flex;
+    gap: 40px;
+}
+.add-product-selector{
+    padding:10px;
+    width: 100px;
+    height: 50px;
+    font-size: 16px;
+    color:#7b7b7b;
+    border: 1px solid #7b7b7b8d;
+    border-radius: 4px;
+}
+.addproduct-itemfield img{
+    height: 70px;
+    width: 70px;
+    border-radius: 10px;
+    object-fit: contain;
+    margin: 10px 0px;
+}
+.addproduct-btn{
+   width: 160px;
+   height: 50px;
+   border-radius: 6px;
+   background: #6079ff;
+   border: none;
+   cursor: pointer;
+   color:white;
+   font-size: 16px;
+   font-weight: 500px;
+
+
 }
