--- a/fullstack-ecommerce-main/frontend/src/components/Hero/Hero.css
+++ b/fullstack-ecommerce-main/frontend/src/components/Hero/Hero.css
@@ -1,97 +1,67 @@
-.hero{
-   height: 100vh;
-   
+.hero {
+  height: 100vh;
 }
-
-.herowrapper{
-  /*background-color: brown;
-  display: flex;*/
-  gap: 100px;
+.herowrapper {
+  display: flex;
+  justify-content: space-between;
   background-color: beige;
-  width: 1200px;
+  width: 100%;
+  height: 600px;
   position: relative;
 }
-.imagecontainer01{
- position: relative;
-   left: 250px;
-   width: 500px;
-   height: 600px;
-   top:0px;
-   background-color: chartreuse;
+.imagecontainer01 {
+  position: relative;
+  left: 0px;
+  width: 400px;
+  height: 600px;
+  top: 0px;
 }
-.everyday{
-    font-size: 80px;
+.ourcollection {
+  display: block;
+  font-size: 40px;
+  font-weight: 400;
 }
-h4 hr{
-  position: absolute;
-  width: 280px;
-  left:200px;
-}
-.herowrapper h4{
-  font-size: 60px;
-  padding: 10px;
-  display: inline;
-  /*font-family: "Anton", sans-serif;*/
+.herowrapper p {
+  font-size: 30px;
+  padding: 20px;
   font-weight: 300;
   font-style: normal;
+  display: inline-block;
   position: absolute;
-  top:200px;
-  right:0px;
-  /*background-color: lightsalmon;*/
-  /*background-color: salmon;*/
-  
+  top: 150px;
+  left: 460px;
 }
-.anton-regular {
-  font-family: "Anton", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.imagecontainer01 img{
+.imagecontainer01 img {
   position: absolute;
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
-.imagecontainer02{
-  
-   background-color:beige;
+.imagecontainer02 {
+  position: relative;
+  right: 0px;
+  width: 400px;
+  height: 600px;
+  top: 0px;
 }
-.imagecontainer02 img{
+.imagecontainer02 img {
+  position: absolute;
   object-fit: cover;
- 
   width: 100%;
   height: 100%;
-  
 }
-@media only screen and (max-width: 760px) and (min-width: 360px) {
-  .herowrapper {
-    padding: 0 10px; /* Reduce padding */
-  }
+.herowrapper button {
+  display: inline;
+  position: absolute;
+  left: 630px;
+  top: 300px;
+  font-size: 18px;
+  height: 50px;
+  width: 130px;
+  padding: 10px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-color: navajowhite;
 }
-/* 
-  /* .imagecontainer01 {
-    left: auto; /* Remove left positioning */
-    /* width: 100%; Make container full width */
-    /* height: auto; Allow height to adjust based on content */
-    /* top: 0; Reset top positioning */
-  
-
-  /* .everyday {
-    font-size: 30px; /* Further decrease font size */
-  
-
-  /* h4 {
-    font-size: 30px; /* Further decrease font size */
-  
-
-  /* h4 hr {
-    width: 40%; /* Adjust width */
-    /* left: 30%;  Center horizontally  */
-  
-/* 
-  .herowrapper h4 {
-    font-size: 30px; /* Further decrease font size */
-   /* top: 15%;  Adjust positioning */
-   
 
