--- a/fullstack-ecommerce-main/frontend/src/components/Navbar/Navbar.css
+++ b/fullstack-ecommerce-main/frontend/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
   color: black;
 }
 .navwrapper {
-  padding: 30px 30px;
+  padding: 20px 30px; 
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -14,7 +14,7 @@
   font-size: 18px;
   list-style: none;
   gap: 50px;
-  justify-content: center;
+ justify-content: center;
 }
 
 .link {
@@ -22,15 +22,20 @@
   text-decoration: none;
   color: black;
 }
-.left {
-  display: flex;
-  align-items: center;
-  gap: 25px;
-}
-.center {
-  font-size: 30px;
+.left{
+  font-size: 33px;
   letter-spacing: 2px;
   cursor: pointer;
+}
+.center {
+  width: 450px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+ 
+}
+.left img {
+  display: none;
 }
 .right {
   display: flex;
@@ -45,13 +50,6 @@
   align-items: center;
   justify-content: space-around;
 }
-/* .nav-login-cart button {
-  width: 60px;
-  outline: none;
-  padding: 5px;
-  border: 1px solid #7a7a7a;
-  border-radius: 70px;
-} */
 .nav-login-cart img {
   height: 30px;
   width: 30px;
@@ -74,21 +72,24 @@
     height: 50px;
   }
   .navwrapper {
-    padding: 5px;
+    padding: 5px 7px;
   }
 
   .item li {
     display: none; 
   }
   .nav-menu-visible {
-    padding: 15px;
+    padding: 5px;
   }
-  .left {
+  .center {
     display: flex;
     align-items: center;
     gap: 8px;
   }
-  .center {
+  .left img {
+    display:block;
+  }
+  .left {
     font-size: 26px;
   }
   .right {
